Fixing horizontal scroll bug

--- a/src/groups-card.css
+++ b/src/groups-card.css
@@ -145,6 +145,10 @@ li.typeahead__item.typeahead__group-contacts > a > span > span{
 }
 
 /* groups */
+.dash-card--groups .groups {
+    overflow: hidden;
+}
+
 .dash-card--groups .group {
     border-left: var(--left-border);
     margin: 8px 0;
